--- a/app/templates/principal.html
+++ b/app/templates/principal.html
@@ -22,7 +22,7 @@
 
                 <div class="login-registro">
 
-                    <h1>Busca y compra produtos en D<span class="letraB">B</span>ox</h1>
+                    <h1>Busca y compra productos de tecnología en D<span class="letraB">B</span>ox</h1>
 
                     
                     <a href="{{url_for('InicioDBox.login')}}" class="enlace">Iniciar sesión</a>
@@ -52,7 +52,7 @@
                     esos productos de técnologia que tanto estabas buscando.
 
                 </div>
-
+ 
             </div>
 
             
