--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -24,43 +24,46 @@
                 </div>
 
             {%endfor%} 
+            
+            <div class="FlexPlantilla">
 
-            <div class="plantillaform">
+                <div class="plantillaform login">
 
-                <h1>Inicio de Sesion</h1>
-
-                <form action="" method="post">
-
-                    <div class="flexform login-login">
-
-                        <div class="datoflex nombre-login">
+                    <h1>Inicio de Sesion</h1>
+    
+                    <form action="" method="post">
+    
+                        <div class="flexform login-login">
+    
+                            <div class="datoflex nombre-login">
+                                
+                                <input type="text" name="user" id="user" required>
+                                <label >Nombre de Usuario</label>
+    
+                            </div>
                             
-                            <input type="text" name="user" id="user" required>
-                            <label >Nombre de Usuario</label>
-
+                            <div class="datoflex apellido-login">
+                                
+                                <input type="password" name="password" id="password" required>
+                                <label for="">Contraseña</label>
+    
+                            </div>
+                            
+                        </div>
+    
+                        <div class="Enlace-registro-login">
+                            <span style="font-weight:bold; font-size:13px; opacity: calc(0.8);">¿Aún no tienes cuenta? prueba con </span><a href="{{url_for('InicioDBox.register')}}" style="font-weight:bold; font-size:13px;">Registrate</a>
+                        </div>
+                        <div class="FlexBoton">
+                            <input type="submit" value="Iniciar Sesion" class="botonlogin boton-login">
                         </div>
                         
-                        <div class="datoflex apellido-login">
-                            
-                            <input type="password" name="password" id="password" required>
-                            <label for="">Contraseña</label>
-
-                        </div>
-                        
-                    </div>
-
-                    <div class="Enlace-registro-login">
-                        <span style="font-weight:bold; font-size:13px; opacity: calc(0.8);">¿Aún no tienes cuenta? prueba con </span><a href="{{url_for('InicioDBox.register')}}" style="font-weight:bold; font-size:13px;">Registrate</a>
-                    </div>
-
-                    <input type="submit" value="Iniciar Sesion" class="botonlogin boton-login">
-
-                </form>
-
-
+    
+                    </form>
+    
+                </div>
 
             </div>
-            
 
         </div>
         
