--- a/app/templates/main/indexmain.html
+++ b/app/templates/main/indexmain.html
@@ -25,14 +25,14 @@
             <!-- <h1>{{g.user_logged['id']}}  {{data}}</h1> -->
 
             <div class="presentacion">
-                <h2 class="titulomain">¡ Bienvenido a D<span class="letraB">B</span>ox <span class="letraB">{{g.user_logged['user']}}</span> !</h2>
+                <h2 class="titulomain">¡Bienvenido a D<span class="letraB">B</span>ox <span class="letraB">{{g.user_logged['user']}}</span>!</h2>
             </div>  
             
 
             <div class="container-opciones">
 
                 <div class="cabecera-opciones">
-                    <h2>¿Que deseas hacer?</h2>
+                    <h2>¿Qué deseas hacer?</h2>
                 </div>
                 
 
@@ -66,7 +66,7 @@
                                     <h2>Carrito</h2>
     
                                     <p>
-                                        ¿Quieres ver que tienes guardado ahora? <br>
+                                        ¿Quieres ver que tienes guardado ahora? 
                                         ¡Esta opción es para ti!
                                     </p>
                                 </div>
