--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -13,7 +13,7 @@ body{
     
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: 100%;
 }
 
 
@@ -87,7 +87,7 @@ body{
     width: 100%;
     height: 300px;
     background-color: black;
-    margin-top: auto;
+    margin-top: 30px;
 
 }
 
@@ -356,10 +356,10 @@ h1{
 
     display: flex;
     flex-wrap: wrap;
-    width: 75%;
+    width: 84%;
     height: auto;
     margin-top: 100px;
-    margin-left: 13%;
+    margin-left: 10%;
 
 }
 
@@ -382,11 +382,14 @@ h1{
 
     display: flex;
     flex-direction: row;
+    width: 100%;
+    height: auto;
 
 }
 
 .cajita{
 
+    width: 50%;
     margin-right: 20px;
 
 }
@@ -401,7 +404,7 @@ h1{
 
     display: flex;
     flex-direction: row;
-    width: 500px;
+    width: 100%;
     height: 200px;
     margin-top: 10px;
     background-color: white;
@@ -421,7 +424,7 @@ h1{
 
 .elementoA{
 
-    padding: 30px;
+    padding: 20px;
 
 }
 
@@ -438,14 +441,7 @@ h1{
 
 }
 
-.result{
 
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 100%;
-
-}
 
 .login-login{
 
@@ -481,12 +477,8 @@ h1{
     position: relative;
     display: flex;
     justify-content: end;
-    /* top: 10%; */
-    /* left: 101.7%; */
-    /* margin: 0px; */
     height: 50px;
     width: 105.5%;
-    /* background-color: #007bff; */
 }
 
 .absoluto-indexmain{
@@ -517,17 +509,22 @@ h1{
 .Form-buscador{
 
     margin-top: 60px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
 
 }
 
 #buscador{
 
 
-    width: 40%;
+    width: 50%;
     height: 40px;
     border-radius: 6px;
     padding: 20px;
-    margin-left: 440px;
+    /* margin-left: 440px; */
 
 }
 
@@ -551,13 +548,26 @@ h1{
 
 .BusquedaErronea-buscador{
 
-    margin-left: 530px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* margin-left: 530px; */
 
 }
 
 .BusquedaErronea-buscador h5{
 
     color: #000000;
+
+}
+
+.result{
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
 
 }
 
